Creating layout in css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator rachunku</title>
+    <title>Notatnik</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
+        <script src="https://kit.fontawesome.com/010679bc69.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,11 +18,11 @@
 
 
     <div class="menu">
-        <h1><i class="fas fa-sticky-note"></i></h1>
+        <h1><i class="fas fa-sticky-note"></i>My notes</h1>
 
 
         <div class="menu-buttons">
-            <buttton class="add icon"><i class="fas fa-plus"></i>Dodaj</buttton>
+            <button class="add icon"><i class="fas fa-plus"></i>Dodaj</buttton>
             <button class="delete-all icon"><i class="fas fa-trash-alt"></i>Usuń wszystkie</button>
         </div>
     </div>
@@ -54,14 +55,14 @@
         </select>
 
 
-        <labe for="text"></labe>
+        <label for="text"></label>
         <textarea id="text"></textarea>
 
         <p class="error">Uzupełnij wszystkie pola!</p>
 
         <div class="panel-buttons">
             <button class="save icons"><i class="fas fa-save"></i> Zapisz</button>
-            <button class="cancle icons"><i class="fas fa-window-close"></i> Anuluj</button>
+            <button class="cancel icons"><i class="fas fa-window-close"></i> Anuluj</button>
         </div>
     </div>
 
