--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="note-area">
 
-        <div class="note">
+        <!-- <div class="note">
             <div class="note-header">
                 <h3 class="note-title">Notatka #1</h3>
                 <button class="delete-note">
@@ -41,13 +41,17 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium quod excepturi voluptates iusto
                 veniam eveniet ipsum aut. Architecto, ipsum!
             </div>
-        </div>
+        </div> -->
+
+    
+
+        
     </div>
 
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
         <label for="category">Wybierz kategorię</label>
-        <select id="category">
+        <select id="category" onchange="selectValue()">
             <option value="0" disabled selected>- wybierz kategorię -</option>
             <option value="1">Zakupy</option>
             <option value="1">Praca</option>
